--- a/FAQ.css
+++ b/FAQ.css
@@ -8,7 +8,7 @@ body{
     background-color: #FFFDD0;
 }  
 .sec-1{
-    background-image: url('in-touch.jpg');
+     background-image: url('in-touch.jpg');
     background-position: center center;
     height: 100vh;
     background-size: cover;
@@ -49,14 +49,14 @@ nav a{
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color: #00000033;
+        background-color: #00000033;
 }
 .context{
     color: white;
     font-size: 80px;
-    font-weight: 300;
+    font-weight: 500;
 }
-.input{
+input{
     display: none;
 }
 
@@ -66,56 +66,26 @@ nav a{
 .mobile-navs{
     display: none;
 }
-.touch{
+.faq-container .faq{
     font-size: 30px;
-    font-weight: 500;
-    padding-left: 120px;
-    padding-top: 70px;
+    text-align: center;
+    margin-top: 50px;
 }
-.text-1{
-    padding: 10px 400px 170px 10px;
-    margin-left: 80px;
+.faq-container .question{
+    font-size: 20px;
+    text-align: center;
+}
+ul{
     margin-top: 30px;
-    border-radius: 5px;
-    border-color: rgba(73, 80, 87, 0.4);
+    margin-left: 400px;
+    line-height: 30px;
+    list-style: decimal;
 }
-.enter{
-    display: flex;
-    gap: 20px;
-    margin-left: 80px;
-    margin-top: 20px;
+li{
+    font-weight: 700;
 }
-.email{
-    padding: 10px 100px 35px 10px;
-    border-radius: 5px;
-    border-color: rgba(73, 80, 87, 0.4);
-    text-align: justify;
-}
-.subject{
-    border-radius: 5px;
-    border-color: rgba(73, 80, 87, 0.4);
-    text-align: justify;
-    padding: 10px 400px 35px 10px;
-    margin-left: 80px;
-    margin-top: 20px;
-}
-.btn{
-    margin-left: 300px;
-    margin-top: 20px;
-    padding-left: 60px;
-    padding-right: 60px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-radius: 5px;
-    font-size: 17px;
-    border: 1px solid rgb(108, 182, 207);
-    background-color: white;
-    color: rgb(71, 146, 172);
-    cursor: pointer;
-}
-.btn:hover{
-    background-color: rgb(53, 138, 167);
-    color: white;
+.text-3{
+    max-width: 600px;
 }
 .reserve-container{
     align-items: center;
@@ -183,7 +153,6 @@ nav a{
 }
 .sec-1{
     width: 100%; 
-    height: 30cm;
 }
 nav{
     display: none;
@@ -207,27 +176,8 @@ nav{
 .check{
         display: block;
 }
-.form{
-    width: 100%;
-}
-.text-1{
-    padding: 10px 100px 130px 10px;
-    margin-left: 30px;
-}
-.enter{
-    display: flex;
-    gap: 10px;
-    margin-left: 30px;
-    margin-top: 20px;
-}
-.email{
-    padding: 10px 20px 35px 10px;
-}
-.subject{
-    padding: 10px 130px 35px 10px;
-}
-.btn{
-    margin-left: 100px;
+.faq-container{
+    width: 100px;
 }
 .reserve-container{
     flex-direction: column;
